--- a/docker-plugin/pom.xml
+++ b/docker-plugin/pom.xml
@@ -130,10 +130,10 @@
                 <artifactId>maven-release-plugin</artifactId>
             </plugin>
 
-            <plugin>
+            <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-            </plugin>
+            </plugin-->
         </plugins>
     </build>
 </project>
